--- a/map1.html
+++ b/map1.html
@@ -80,9 +80,9 @@
     <div id="departementList"></div>
   </div>
 
-  <button class="toggle-btn" data-target="texte2">Nom département</button>
+  <button class="toggle-btn" data-target="texte2">Texte2</button>
   <div id="filter-texte2" class="hidden">
-    <label class="selectall-label"><input type="checkbox" id="texte2-select-all" checked> Tout Nom département</label>
+    <label class="selectall-label"><input type="checkbox" id="texte2-select-all" checked> god</label>
     <div id="texte2List"></div>
   </div>
 </div>
