--- a/map1.html
+++ b/map1.html
@@ -82,7 +82,7 @@
 
   <button class="toggle-btn" data-target="texte2">Texte2</button>
   <div id="filter-texte2" class="hidden">
-    <label class="selectall-label"><input type="checkbox" id="texte2-select-all" checked> god</label>
+    <label class="selectall-label"><input type="checkbox" id="texte2-select-all" checked> new</label>
     <div id="texte2List"></div>
   </div>
 </div>
